<resources>
    <string name="app_name">TaskManager</string>

    <string name="toDo">TODO</string>
    <string name="email">EMAIL</string>
    <string name="phone">PHONE</string>
    <string name="meeting">MEETING</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string name="status">Status</string>


    <string name="addButton">ADD</string>


</resources>
